# ChangeLog for www-client/opera
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.60 2006/09/02 18:45:46 jer Exp $

  02 Sep 2006; Jeroen Roovers <jer@gentoo.org> opera-9.01-r1.ebuild:
  einfo to elog (bug #145953).

*opera-9.01-r1 (02 Sep 2006)

  02 Sep 2006; Jeroen Roovers <jer@gentoo.org> +opera-9.01-r1.ebuild:
  Revision bump wrt bug #139407.

  02 Sep 2006; Jeroen Roovers <jer@gentoo.org>
  -files/opera-8.54-install.patch, -files/opera-9.00_pre2-install.patch,
  -opera-8.54.ebuild, -opera-9.00_pre2.ebuild:
  Removed 8.54 for security vuln <http://secunia.com/advisories/19480/> and
  9.00_pre2 just because.

  19 Aug 2006; Jeroen Roovers <jer@gentoo.org> opera-9.00_pre2.ebuild,
  opera-9.00.ebuild, opera-9.01.ebuild:
  Removed debugging stuff.

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> -opera-8.51.ebuild,
  -opera-8.52.ebuild:
  Cleaning up old versions (bug #140558).

*opera-9.01 (09 Aug 2006)

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> +opera-9.01.ebuild:
  Version bump, bug #142548.

  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org> opera-9.00.ebuild:
  stable x86; bug #137634

  03 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> opera-9.00.ebuild:
  Stable on sparc wrt security #137634

  03 Jul 2006; Thomas Cort <tcort@gentoo.org> opera-9.00.ebuild:
  Stable on amd64 wrt security Bug #137634.

  01 Jul 2006; Lars Weiler <pylon@gentoo.org> opera-9.00.ebuild:
  Stable on ppc; security bug #137634.

  01 Jul 2006; Carsten Lohrke <carlo@gentoo.org> opera-9.00.ebuild:
  Restore previous ebuild.

  30 Jun 2006; Carsten Lohrke <carlo@gentoo.org>
  files/opera-9.00-install.patch, opera-9.00.ebuild:
  Version bump. Bug #137634.

*opera-9.00 (25 Jun 2006)

  25 Jun 2006; Thomas Matthijs <axxo@gentoo.org>
  +files/opera-9.00-install.patch, +opera-9.00.ebuild:
  version bump

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> opera-8.51.ebuild,
  opera-8.52.ebuild: