@@ -23,18 +23,18 @@ EBUILD opera-9.00.ebuild 4387 RMD160 23b8367432f0a068a0a022e5e4db5981d154133f SH
 MD5 427285a688bcc904312b8aea3a5212e6 opera-9.00.ebuild 4387
 RMD160 23b8367432f0a068a0a022e5e4db5981d154133f opera-9.00.ebuild 4387
 SHA256 251a0e015d7b0f3bfb16e5188a2f4b0848b5b97b649e33ca5dd7f07c7bb64c5c opera-9.00.ebuild 4387
-EBUILD opera-9.01-r1.ebuild 4483 RMD160 ab9e2f5652730a4bd49bf033d375b4a535c46561 SHA1 74cca7ff4bce6d1d59a03bd2ee9a2cb2e15ea780 SHA256 c9d6e6a1069d7df3a5d40b58e0ae163e3aaef1b5a58c743d9f087d65f67fcf80
-MD5 175ed7027ac0489dc87d6e517796ceec opera-9.01-r1.ebuild 4483
-RMD160 ab9e2f5652730a4bd49bf033d375b4a535c46561 opera-9.01-r1.ebuild 4483
-SHA256 c9d6e6a1069d7df3a5d40b58e0ae163e3aaef1b5a58c743d9f087d65f67fcf80 opera-9.01-r1.ebuild 4483
+EBUILD opera-9.01-r1.ebuild 4454 RMD160 0bd3f5bfcb437ad45a01fab34fb73573435f5448 SHA1 0fa75569cfe3d456bebf4c7752956451b97ba3f4 SHA256 575a1528504bac16179ea78c5235ff171ae8f4d07901db119c7723e7ecbfe5e3
+MD5 029297801bec40af0cfa50768a78e380 opera-9.01-r1.ebuild 4454
+RMD160 0bd3f5bfcb437ad45a01fab34fb73573435f5448 opera-9.01-r1.ebuild 4454
+SHA256 575a1528504bac16179ea78c5235ff171ae8f4d07901db119c7723e7ecbfe5e3 opera-9.01-r1.ebuild 4454
 EBUILD opera-9.01.ebuild 4433 RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c SHA1 47714dcefb0a238e7aef4e47784fae230cc24867 SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996
 MD5 19371eec95870144a3c1bb6122d549d6 opera-9.01.ebuild 4433
 RMD160 44ffd33b16689a82669c2114f76b66e95fc74e6c opera-9.01.ebuild 4433
 SHA256 359a3eccddfd40ff6d66ef0de4ffbe990c6b75b46dbd709a2f90c7ada988d996 opera-9.01.ebuild 4433
-MISC ChangeLog 22428 RMD160 f97f28831a294fecddcc6f40818a5e61e3c2a1d0 SHA1 bb4f84832604cdcdc173fdc0a748b64823318aad SHA256 cd04982eee71de726d178fc482fecf54345819e20cad1668abf7ce8ef29d8a22
-MD5 c88f326a7eb7f1582b59801a145892cb ChangeLog 22428
-RMD160 f97f28831a294fecddcc6f40818a5e61e3c2a1d0 ChangeLog 22428
-SHA256 cd04982eee71de726d178fc482fecf54345819e20cad1668abf7ce8ef29d8a22 ChangeLog 22428
+MISC ChangeLog 22527 RMD160 356e844fd881df6a82bbb1f3716b397702ee7570 SHA1 23accef838312c3a0a9649726db6f9448c0bdb8e SHA256 e5e6bb935efc4dbcc0696e2e93049be6c03fceb2a8dacd430dc0724db2df677c
+MD5 00b3522289fe38a83728ca27a3855189 ChangeLog 22527
+RMD160 356e844fd881df6a82bbb1f3716b397702ee7570 ChangeLog 22527
+SHA256 e5e6bb935efc4dbcc0696e2e93049be6c03fceb2a8dacd430dc0724db2df677c ChangeLog 22527
 MISC metadata.xml 220 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c SHA1 0718289f296f6229a8833cf44f48cc0f683b682b SHA256 4e10c895f4654efa60587dd3c2febe6c18471fbf752cde4a12fbe884b3cfa287
 MD5 db97f8b4a8ea79d4f2660a1fdb6d4a01 metadata.xml 220
 RMD160 7ff7ad4c6e8d172bcfc712cdea261e851838129c metadata.xml 220
